# olivin_store

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.dev.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .gitignore  README.md  app.py  main.py  manage.py  pyproject.toml  requirements.txt
backend/docker/: django.sh  entrypoint.sh
backend/docker/celery/: beat.sh  flower.sh  worker.sh
backend/docker/ninja/: Dockerfile
backend/docker/redis/: Dockerfile  init.sh
backend/docker/scripts/: wait_for_port.sh
backend/media/files/: country_codes.csv
backend/src/: api.py  main.py
backend/src/auth/: errors.py  tasks.py  throttles.py  utils.py
backend/src/auth/controllers/: __init__.py  auth_controller.py
backend/src/auth/errors/: __init__.py  auth_exception.py  constants.py  exceptions.py
backend/src/auth/schemas/: __init__.py  auth_schema.py
backend/src/auth/services/: __init__.py  auth_service.py
backend/src/categories/: apps.py  models.py
backend/src/common/: admin.py  api.py  apps.py  mixins.py  models.py  permissions.py  renderers.py  responses.py  tasks.py  types.py  utils.py
backend/src/common/controllers/: __init__.py  common_controller.py
backend/src/common/errors/: __init__.py  constants.py  exceptions.py
backend/src/core/: __init__.py  adds.py  api.py  asgi.py  celery.py  config.py  handler.py  storage.py  urls.py  wsgi.py
backend/src/data/: sessions.py  tasks.py  utils.py
backend/src/delivers/: apps.py  models.py
backend/src/events/: apps.py  models.py
backend/src/files/: apps.py  controllers.py  errors.py  schemas.py  services.py  utils.py
backend/src/orders/: apps.py  enums.py  models.py
backend/src/products/: apps.py  models.py
backend/src/reviews/: apps.py  models.py
backend/src/users/: apps.py  controllers.py  enums.py  files.py  models.py  tasks.py  types.py  utils.py
backend/templates/: register-mail.html
(+142 files in other folders)
